--- a/index.html
+++ b/index.html
@@ -633,10 +633,10 @@
                      </video>
                      <div class="wrapper__main_inner-sc-d7vgux-0 MainHerostyle__MainInner-sc-18anw91-2 fhPlTV cqumSH">
                         <div class="MainHerostyle__Content-sc-18anw91-3 hGbMTi">
-                           <h1 class="text__heading_3x-sc-1xracbr-0 MainHerostyle__Header-sc-18anw91-6 gpkcmk MLBQb">We simplify tech</h1>
-                           <p class="text__paragraph_big-sc-1xracbr-8 MainHerostyle__Paragraph-sc-18anw91-7 JNKLB ecKoND">Du har visionen. Vi har kompetensen. Med vår erfarenhet av appar, webbplatser och system vägleder vi dig till det bästa sättet att förverkliga din digitala produkt.</p>
+                           <h1 class="text__heading_3x-sc-1xracbr-0 MainHerostyle__Header-sc-18anw91-6 gpkcmk MLBQb">Vi effektiviserar tekniken med AI</h1>
+                           <p class="text__paragraph_big-sc-1xracbr-8 MainHerostyle__Paragraph-sc-18anw91-7 JNKLB ecKoND">Din vision är vår drivkraft. Med vår djupa kompetens inom utveckling av appar, webbplatser och system leder vi dig professionellt genom processen för att förverkliga och optimera din digitala produkt på bästa sätt.</p>
                            <div class="MainHerostyle__Repeater-sc-18anw91-8 iRNsvr">
-                              <a color="light" href="vara-tjanster/index.html" target="" class="button__btn_large-sc-i59f7s-0 MainHerostyle__ButtonLink-sc-18anw91-9 dImYww duVfWF">Låt oss hjälpa dig</a>
+                              <a color="light" href="vara-tjanster/index.html" target="" class="button__btn_large-sc-i59f7s-0 MainHerostyle__ButtonLink-sc-18anw91-9 dImYww duVfWF">UPPTÄCK VÅRA TJÄNSTER</a>
                               <!-- <a color="light" href="karriar/index.html" target="" class="button__btn_large-sc-i59f7s-0 MainHerostyle__ButtonLink-sc-18anw91-9 dImYww duVfWF">Bli en qte:ie</a> -->
                            </div>
                         </div>
@@ -645,18 +645,17 @@
                   <section id="services">
                      <div class="wrapper__main_inner-sc-d7vgux-0 Servicesstyle__MainInner-sc-jlqcj3-0 fhPlTV">
                         <div class="Servicesstyle__HeaderBlock-sc-jlqcj3-2 ZZgwK">
-                           <h2 color="#0C3A53;" class="Servicesstyle__Header-sc-jlqcj3-3 cTPMtp">Vi är techbyrån som</h2>
-                           <h2 color="purple" class="Servicesstyle__Header-sc-jlqcj3-3 ejHJic">förenklar</h2>
-                           <h2 color="#0C3A53;" class="Servicesstyle__Header-sc-jlqcj3-3 cTPMtp">och</h2>
-                           <h2 color="purple" class="Servicesstyle__Header-sc-jlqcj3-3 ejHJic">förverkligar</h2>
+                           <h2 color="#0C3A53;" class="Servicesstyle__Header-sc-jlqcj3-3 cTPMtp">Vi är din professionella partner inom teknik, specialiserade på att underlätta, realisera och säkra. 
+                           </h2>
+                          
                         </div>
-                        <p class="text__paragraph_big-sc-1xracbr-8 Servicesstyle__IntroText-sc-jlqcj3-4 JNKLB eXxROD">Vi är techbyrån som hjälper dig förverkliga din digitala vision. Genom att vägleda dig till de rätta tekniska besluten, smarta strategiska val och användarvänlig design tar vi tillsammans klivet från idé till färdig produkt. We simplify tech – det är vad vi står för.  Oavsett om du vill bygga en webbplats, skapa en applösning eller förstärka ditt egna team med extra konsulter hjälper vi dig!</p>
+                        <p class="text__paragraph_big-sc-1xracbr-8 Servicesstyle__IntroText-sc-jlqcj3-4 JNKLB eXxROD">Vår techbyrå engagerar sig i att bistå dig med att förverkliga din digitala vision och samtidigt säkerställa cybersäkerheten. Genom att vägleda dig mot välgrundade tekniska beslut, strategiska val och användarvänlig design tar vi tillsammans steget från koncept till en fullständig produkt. Oavsett om du strävar efter att skapa en dynamisk webbplats, utveckla en skräddarsydd app eller behöver hjälp med automatisering och integration, så finns vi här för att stödja dig.</p>
                         <div class="Servicesstyle__Content-sc-jlqcj3-1 iXGOSI">
                            <a href="vara-tjanster/webbutveckling/index.html" target="" class="Servicesstyle__ServiceBlock-sc-jlqcj3-5 bcjVWt">
                               <div class="Servicesstyle__TextContainer-sc-jlqcj3-6 jUWyRm">
                                  <h3 class="text__heading_lg-sc-1xracbr-3 Servicesstyle__Subheader-sc-jlqcj3-7 bMjjZJ">Webbutveckling</h3>
-                                 <p class="text__paragraph-sc-1xracbr-7 Servicesstyle__Paragraph-sc-jlqcj3-8 kITvjv ecLsbO">Från kreativa kampanjsidor till avancerade e-handelsplattformar – vi är redo för det mesta när det kommer till webbutveckling. Vi tar oss an både små och stora projekt och som techbyrå kan vi också lösa det mer tekniskt utmanande.</p>
-                                 <div class="Servicesstyle__ButtonLink-sc-jlqcj3-11 fcckum">Berätta mer!</div>
+                                 <p class="text__paragraph-sc-1xracbr-7 Servicesstyle__Paragraph-sc-jlqcj3-8 kITvjv ecLsbO">Vi utmärker oss inom skapandet av både inspirerande webbplatser och sofistikerade e-handelsplattformar med riktigt bra design. Vi tar ansvaret för projekt av alla storlekar och komplexitetsgrader och som en dedikerad techbyrå har vi kapaciteten att lösa även de mest tekniskt utmanande uppgifterna.</p>
+                                 <div class="Servicesstyle__ButtonLink-sc-jlqcj3-11 fcckum">UPPTÄCK MER!</div>
                               </div>
                               <div class="Servicesstyle__ImageContainer-sc-jlqcj3-9 hVKTuo">
                                  <div data-gatsby-image-wrapper="" class="gatsby-image-wrapper gatsby-image-wrapper-constrained Servicesstyle__NewImage-sc-jlqcj3-10 bZjHvr">
@@ -679,8 +678,8 @@
                            <a href="vara-tjanster/apputveckling/index.html" style="flex-direction: row-reverse;" target="" class="Servicesstyle__ServiceBlock-sc-jlqcj3-5 bcjVWt">
                               <div class="Servicesstyle__TextContainer-sc-jlqcj3-6 jUWyRm">
                                  <h3 class="text__heading_lg-sc-1xracbr-3 Servicesstyle__Subheader-sc-jlqcj3-7 bMjjZJ">Apputveckling</h3>
-                                 <p class="text__paragraph-sc-1xracbr-7 Servicesstyle__Paragraph-sc-jlqcj3-8 kITvjv ecLsbO">Vi utvecklar både native appar (för iOS och Android), webbappar (PWA) och hybridappar. Vi hjälper dig att hitta rätt väg för att nå dina mål och samtidigt uppfylla dina användares behov.</p>
-                                 <div class="Servicesstyle__ButtonLink-sc-jlqcj3-11 fcckum">Berätta mer!</div>
+                                 <p class="text__paragraph-sc-1xracbr-7 Servicesstyle__Paragraph-sc-jlqcj3-8 kITvjv ecLsbO">Vi specialiserar oss på att skapa unika mobilapplikationer, inklusive native appar för både iOS och Android, webbaserade appar (PWA) och hybridapplikationer. Vår expertis ligger i att guida dig genom den optimala vägen för att uppnå dina mål och samtidigt tillgodose dina användares specifika krav och önskemål.</p>
+                                 <div class="Servicesstyle__ButtonLink-sc-jlqcj3-11 fcckum">UPPTÄCK MER!</div>
                               </div>
                               <div class="Servicesstyle__ImageContainer-sc-jlqcj3-9 hVKTuo">
                                  <div data-gatsby-image-wrapper="" class="gatsby-image-wrapper gatsby-image-wrapper-constrained Servicesstyle__NewImage-sc-jlqcj3-10 bZjHvr">
