--- a/privacy-cookie-policy/index.html
+++ b/privacy-cookie-policy/index.html
@@ -398,44 +398,44 @@
                <main class="Mainstyle__Main-sc-159fhha-0 kpAHLJ">
                   <section id="text-hero">
                      <div class="wrapper__main_inner-sc-d7vgux-0 TextHerostyle__MainInner-sc-uvyop-0 fhPlTV">
-                        <h1 class="text__heading_xxl-sc-1xracbr-1 TextHerostyle__HeaderBlock-sc-uvyop-1 gGrZqD elzsKl"><span color="#0C3A53;" class="TextHerostyle__Header-sc-uvyop-2 drmTbD">Privacy &amp; Cookie policy</span></h1>
-                        <p class="text__paragraph_big-sc-1xracbr-8 TextHerostyle__Paragraph-sc-uvyop-3 JNKLB jRqwbi">Den 25 maj 2018 började GDPR (General Data Protection Regulation) att gälla i Sverige och resten av EU. För att du ska känna dig trygg med hur vi på qte development AB behandlar dina uppgifter vill vi berätta för dig vad som gäller.</p>
+                        <h1 class="text__heading_xxl-sc-1xracbr-1 TextHerostyle__HeaderBlock-sc-uvyop-1 gGrZqD elzsKl"><span color="#0C3A53;" class="TextHerostyle__Header-sc-uvyop-2 drmTbD">Integritets- och Cookie-policy</span></h1>
+                        <p class="text__paragraph_big-sc-1xracbr-8 TextHerostyle__Paragraph-sc-uvyop-3 JNKLB jRqwbi">Från och med den 25 maj 2018 trädde GDPR (Generell Dataskyddsförordning) i kraft i Sverige och övriga EU. Vi på Pasver AB vill försäkra dig om att vi hanterar dina data på ett tryggt sätt och vill därför informera dig om gällande rutine.</p>
                      </div>
                   </section>
                   <section id="text-columns">
                      <div class="wrapper__main_inner-sc-d7vgux-0 TextColumnsstyle__MainInner-sc-asm5i8-0 fhPlTV">
                         <div class="TextColumnsstyle__Content-sc-asm5i8-2 cQzHyq">
                            <div class="TextColumnsstyle__Block-sc-asm5i8-3 gtLjwI">
-                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Hur hanterar vi personuppgifter?</h5>
-                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">För oss är det viktigt att du är trygg med vår hantering av dina personuppgifter. Till följd av lagändringen den 25 maj 2018 har vi kompletterat vår integritetspolicy i enlighet med GDPR.</p>
+                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Behandling av individuppgifter:</h5>
+                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">Vi lägger stor vikt vid att du känner dig säker med hur vi hanterar dina individuppgifter. Som en följd av lagändringen den 25 maj 2018 har vi kompletterat vår privatlivspolicy i enlighet med GDPR.</p>
                            </div>
                            <div class="TextColumnsstyle__Block-sc-asm5i8-3 gtLjwI">
-                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Vem ansvarar för dina personuppgifter?</h5>
-                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">qte development AB är personuppgiftsansvarig för de personuppgifter som du skickar till oss och vi ansvarar för dina personuppgifter i enlighet med GDPR.</p>
+                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Ansvar för individuppgifter:</h5>
+                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">Pasver AB är individuppgiftsansvarig för de individuppgifter som du delar med oss, och vi hanterar dessa enligt GDPR.</p>
                            </div>
                            <div class="TextColumnsstyle__Block-sc-asm5i8-3 gtLjwI">
-                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Vad för slags personuppgifter sparar vi?</h5>
-                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">När du delar uppgifter med oss i ett formulär på vår hemsida, via mail eller telefon sparas de uppgifterna tills din aktivitet hos oss är genomförd. Därefter raderar vi de sparade uppgifterna om: namn, adress, telefonnummer och mailadress. Vi lämnar aldrig ut dina uppgifter till tredje part.</p>
+                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Karaktären av sparade individuppgifter:</h5>
+                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">När du delar information med oss via formulär på vår hemsida, via e-post eller telefon, lagras dessa uppgifter tills din interaktion med oss är slutförd. Efter det raderar vi sparade uppgifter som namn, adress, telefonnummer och e-postadress. Vi delar aldrig dina uppgifter med tredje part.</p>
                            </div>
                            <div class="TextColumnsstyle__Block-sc-asm5i8-3 gtLjwI">
-                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Varför sparar vi personuppgifter och hur använder vi dessa?</h5>
-                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">Vi sparar ovanstående uppgifter för att kunna hantera dina frågor, fakturor och för att kunna skicka ut information till dig inför, under och efter våra projekt. Vi sparar dem även för att ha möjlighet att informera dig om andra tjänster vi erbjuder.</p>
+                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Syftet med att spara individuppgifter och hur de används:</h5>
+                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">Vi sparar ovanstående uppgifter för att hantera dina förfrågningar, fakturor och för att skicka relevant information före, under och efter våra projekt. Vi använder även dessa uppgifter för att informera dig om andra tjänster vi erbjuder.</p>
                            </div>
                            <div class="TextColumnsstyle__Block-sc-asm5i8-3 gtLjwI">
-                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Vilka är dina rättigheter?</h5>
-                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">Du har när som helst rätt att begära ut information om de personuppgifter vi har om dig. Om dina uppgifter är felaktiga, ofullständiga eller irrelevanta, kan du begära att få dem rättade eller raderade. Om du vill att vi raderar din information hos oss skickar du ett mail till hej@qte.se, så tar vi bort dig ur alla våra register. För att ta bort dig som kund krävs att du inte har några obetalda fakturor hos oss.</p>
+                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Dina rättigheter:</h5>
+                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">Du har rätt att när som helst begära information om de individuppgifter vi har om dig. Om uppgifterna är felaktiga, ofullständiga eller irrelevanta kan du begära att de rättas eller raderas. Vid önskan om att radera din information hos oss, vänligen kontakta info@pasver.se, och vi tar bort dig från alla våra register. För att avsluta ditt kundkonto krävs att inga obetalda fakturor är kvar.</p>
                            </div>
                            <div class="TextColumnsstyle__Block-sc-asm5i8-3 gtLjwI">
-                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Vem har tillgång till dina personuppgifter?</h5>
-                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">Dina uppgifter kan komma att delas inom organisationen. Vi vidarebefordrar, säljer, hyr ut eller byter aldrig dina personuppgifter för marknadsföringsändamål till tredje part.</p>
+                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Tillgång till dina individuppgifter:</h5>
+                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">Dina uppgifter kan delas inom vår organisation, men vi säljer, hyr ut eller byter aldrig dina individuppgifter för marknadsföringsändamål med tredje part.</p>
                            </div>
                            <div class="TextColumnsstyle__Block-sc-asm5i8-3 gtLjwI">
-                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Uppgifter om företaget</h5>
-                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">qte development AB, Aspanvägen 30, 372 97 Ronneby, med organisationsnummer 559068-8718 är personuppgiftsansvarig för hantering av dina personuppgifter. <br />
+                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Företagsinformation:</h5>
+                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">Pasver AB, Ekfatsgatan 4, 11757 Stockholm, med organisationsnummer 559053-2486, är individuppgiftsansvarig för hantering av dina individuppgifter. <br />
                                  <br />
-                                 Kontaktuppgifter: <br />
-                                 Mail: hej@qte.se<br />
-                                 Tel: +4673-322 04 55
+                                 Kontaktinformation: <br />
+                                 E-mejl: info@pasver.se<br />
+                                 Telefon: +4676-611 11 18
                               </p>
                            </div>
                         </div>
@@ -443,27 +443,27 @@
                   </section>
                   <section id="text-columns">
                      <div class="wrapper__main_inner-sc-d7vgux-0 TextColumnsstyle__MainInner-sc-asm5i8-0 fhPlTV">
-                        <h2 class="text__heading_xl-sc-1xracbr-2 TextColumnsstyle__Header-sc-asm5i8-1 dDQFpA">Cookie policy</h2>
+                        <h2 class="text__heading_xl-sc-1xracbr-2 TextColumnsstyle__Header-sc-asm5i8-1 dDQFpA">Policy för Cookie</h2>
                         <div class="TextColumnsstyle__Content-sc-asm5i8-2 cQzHyq">
                            <div class="TextColumnsstyle__Block-sc-asm5i8-3 gtLjwI">
-                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Vad är en cookie?</h5>
-                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">En cookie är en textfil som skickas från vår webbserver och sparas i din webbläsare. Cookies används för att förbättra din upplevelse medan du navigerar på hemsidan, till exempel genom att komma ihåg vilket språk du vill läsa sidan på, och genom att skicka statistik till oss som gör att vi kan förbättra hemsidan.<br />
+                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Vad är Cookies?</h5>
+                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">En kaka är en textfil som skickas från vår webbserver och lagras i din webbläsare. Kakor används för att förbättra din upplevelse under ditt besök på vår hemsida, exempelvis genom att komma ihåg ditt språkval, samt genom att tillhandahålla statistik som hjälper oss att förbättra webbplatsen.<br />
                                  <br />
-                                 Vi hoppas att denna policy besvarar dina frågor om vår användning av cookies. Om du har ytterligare funderingar är du välkommen att höra av dig till hej@qte.se.
+                                 Vi hoppas att denna policy besvarar dina frågor om vår användning av kakor. Vid ytterligare funderingar är du välkommen att kontakta oss på info@pasver.se.
                               </p>
                            </div>
                            <div class="TextColumnsstyle__Block-sc-asm5i8-3 gtLjwI">
-                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Hur och varför använder vi cookies?</h5>
-                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">Vi använder cookies för att förbättra vår hemsida. Det gör vi genom att samla in övergripande statistik på hur användare navigerar på vår hemsida.<br />
+                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Användning av kakor och syftet bakom det</h5>
+                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">Vi använder kakor för att förbättra vår webbplats genom att samla in övergripande statistik om användarnas navigering.<br />
                                  <br />
-                                 Vi använder cookies från tredje part, t.ex. Google Analytics, för att spåra hur vår hemsida används. Det gör vi för att till exempel kunna se vilka sidor som besöks och hur länge användarna är på varje sida. Det hjälper oss att få en bättre förståelse av hur folk använder vår sida och hur de kommer in på den.<br />
+                                 Tredjepartskakor, såsom Google Analytics, används för att spåra hur vår webbplats används. Detta möjliggör exempelvis analys av besökta sidor och varaktigheten av användares vistelse på varje sida, vilket hjälper oss att förstå hur vår sida används och hur besökare når den.<br />
                                  <br />
-                                 Vi använder också tredjepartscookies i vår marknadsföring för att kunna visa annonser baserat på det en användare läst om på vår hemsida.
+                                 I vår marknadsföring använder vi även tredjepartskakor för att visa annonser baserat på användarens intresse för vår webbplats.
                               </p>
                            </div>
                            <div class="TextColumnsstyle__Block-sc-asm5i8-3 gtLjwI">
-                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Hur kan jag inaktivera cookies?</h5>
-                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">Du kan förhindra att cookies placeras i dina webbläsarinställningar. Vänligen se din webbläsares hjälpsidor för hur man inaktiverar cookies i just den webbläsare du använder.</p>
+                              <h5 class="text__heading_sm-sc-1xracbr-5 TextColumnsstyle__Subheader-sc-asm5i8-4 iehGeS ekzqLb">Hur inaktiverar jag Cookies?</h5>
+                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsstyle__Paragraph-sc-asm5i8-5 kITvjv">Du kan förhindra att kakor placeras i din webbläsares inställningar. Vänligen konsultera din webbläsares hjälpsidor för information om hur du inaktiverar kakor i den specifika webbläsare du använder.</p>
                            </div>
                         </div>
                      </div>
