--- a/vara-tjanster/apputveckling/index.html
+++ b/vara-tjanster/apputveckling/index.html
@@ -575,14 +575,14 @@
                      <div class="wrapper__main_inner-sc-d7vgux-0 IconHerostyle__MainInner-sc-t3oyw9-0 fhPlTV jyGUD">
                         <div class="IconHerostyle__Container-sc-t3oyw9-1 blzDdX">
                            <div class="IconHerostyle__TextContent-sc-t3oyw9-5 iUuDDd">
-                              <h1 class="text__heading_xxl-sc-1xracbr-1 IconHerostyle__Header-sc-t3oyw9-7 gGrZqD">Apputveckling</h1>
-                              <p class="text__paragraph_big-sc-1xracbr-8 IconHerostyle__Paragraph-sc-t3oyw9-8 JNKLB">När du ska ta fram en ny app är du i trygga händer hos oss. Våra team med engagerade designers, utvecklare och projektledare är med dig från första skiss till lansering av din nya app. <br />
+                              <h1 class="text__heading_xxl-sc-1xracbr-1 IconHerostyle__Header-sc-t3oyw9-7 gGrZqD">APPUTVECKLING</h1>
+                              <p class="text__paragraph_big-sc-1xracbr-8 IconHerostyle__Paragraph-sc-t3oyw9-8 JNKLB">När du planerar att skapa en ny applikation kan du vara försäkrad om att du är i kompetenta händer hos oss. Våra dedikerade designteam, utvecklare och projektledare är med dig från den inledande konceptualiseringen till själva lanseringen av din nyskapade applikation. <br />
                                  <br />
-                                 Vi utvecklar både native appar (för iOS och Android), webbappar (PWA) och hybridappar. Vi hjälper dig att hitta rätt väg för att nå dina mål och samtidigt uppfylla dina användares behov.
+                                 Vi specialiserar oss på att utveckla såväl nativa applikationer (för både iOS och Android), webbapplikationer (Progressive Web Apps) som hybridapplikationer. Genom att samarbeta med oss får du stöd att navigera rätt väg för att nå dina mål och samtidigt tillfredsställa dina användares krav.
                               </p>
                               <div class="SideContactFormstyled__Container-sc-xpl7fe-0 iPuiUE">
                                  <div color="purpleOn#0C3A53;" class="SideContactFormstyled__Button-sc-xpl7fe-1 czEjVU">
-                                    Ta första steget<!-- --> 
+                                    MÖTESBOKNING
                                     <svg width="21" height="12" viewBox="0 0 21 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                                        <path d="M20.5303 6.53033C20.8232 6.23744 20.8232 5.76256 20.5303 5.46967L15.7574 0.696701C15.4645 0.403807 14.9896 0.403807 14.6967 0.6967C14.4038 0.989594 14.4038 1.46447 14.6967 1.75736L18.9393 6L14.6967 10.2426C14.4038 10.5355 14.4038 11.0104 14.6967 11.3033C14.9896 11.5962 15.4645 11.5962 15.7574 11.3033L20.5303 6.53033ZM-6.55671e-08 6.75L20 6.75L20 5.25L6.55671e-08 5.25L-6.55671e-08 6.75Z" fill="#0EBAB1"></path>
                                     </svg>
