--- a/vara-tjanster/index.html
+++ b/vara-tjanster/index.html
@@ -456,8 +456,8 @@
                <main class="Mainstyle__Main-sc-159fhha-0 kpAHLJ">
                   <section id="text-hero">
                      <div class="wrapper__main_inner-sc-d7vgux-0 TextHerostyle__MainInner-sc-uvyop-0 fhPlTV">
-                        <h1 class="text__heading_xxl-sc-1xracbr-1 TextHerostyle__HeaderBlock-sc-uvyop-1 gGrZqD elzsKl"><span color="#0C3A53;" class="TextHerostyle__Header-sc-uvyop-2 drmTbD">Våra tjänster</span></h1>
-                        <p class="text__paragraph_big-sc-1xracbr-8 TextHerostyle__Paragraph-sc-uvyop-3 JNKLB jRqwbi">Ska du ta fram en ny app, eller ge din hemsida en ny look? Vi kan hjälpa dig att driva hela projektet från första skiss till lansering, eller stärka upp ditt egna team med kompetenta konsulter inom design och utveckling. Med vårt flexibla arbetssätt tar vi fram ett team som passar era behov och anpassar projektet enligt er budget och tidsplan.</p>
+                        <h1 class="text__heading_xxl-sc-1xracbr-1 TextHerostyle__HeaderBlock-sc-uvyop-1 gGrZqD elzsKl"><span color="#0C3A53;" class="TextHerostyle__Header-sc-uvyop-2 drmTbD">Våra Professionella Tjänster</span></h1>
+                        <p class="text__paragraph_big-sc-1xracbr-8 TextHerostyle__Paragraph-sc-uvyop-3 JNKLB jRqwbi">Oavsett om du planerar att utveckla en ny applikation eller ge din webbplats en modernisering, erbjuder vi omfattande tjänster för att vägleda hela projektet från initiala koncept till framgångsrik lansering. Vi har omfattande erfarenhet inom cybersäkerhet och prioriterar trygghet. Vårt dedikerade team är här för att säkerställa att din digitala närvaro är robust och skyddad mot potentiella hot och risker.</p>
                      </div>
                   </section>
                   <section id="services">
@@ -466,8 +466,8 @@
                            <a href="vara-tjanster/webbutveckling/index.html" target="" class="Servicesstyle__ServiceBlock-sc-jlqcj3-5 bcjVWt">
                               <div class="Servicesstyle__TextContainer-sc-jlqcj3-6 jUWyRm">
                                  <h3 class="text__heading_lg-sc-1xracbr-3 Servicesstyle__Subheader-sc-jlqcj3-7 bMjjZJ">Webbutveckling</h3>
-                                 <p class="text__paragraph-sc-1xracbr-7 Servicesstyle__Paragraph-sc-jlqcj3-8 kITvjv ecLsbO">Från kreativa kampanjsidor till avancerade e-handelsplattformar – vi är redo för det mesta när det kommer till webbutveckling. Vi tar oss an både små och stora projekt och som techbyrå kan vi också lösa det mer tekniskt utmanande.</p>
-                                 <div class="Servicesstyle__ButtonLink-sc-jlqcj3-11 fcckum">Berätta mer!</div>
+                                 <p class="text__paragraph-sc-1xracbr-7 Servicesstyle__Paragraph-sc-jlqcj3-8 kITvjv ecLsbO">Vi utmärker oss inom skapandet av både inspirerande webbplatser och sofistikerade e-handelsplattformar med riktigt bra design. Vi tar ansvaret för projekt av alla storlekar och komplexitetsgrader och som en dedikerad techbyrå har vi kapaciteten att lösa även de mest tekniskt utmanande uppgifterna.</p>
+                                 <div class="Servicesstyle__ButtonLink-sc-jlqcj3-11 fcckum" href="../webbutveckling/index.html">UPPTÄCK MER!</div>
                               </div>
                               <div class="Servicesstyle__ImageContainer-sc-jlqcj3-9 hVKTuo">
                                  <div data-gatsby-image-wrapper="" class="gatsby-image-wrapper gatsby-image-wrapper-constrained Servicesstyle__NewImage-sc-jlqcj3-10 bZjHvr">
