--- a/vara-tjanster/automatisering-integrationer/index.html
+++ b/vara-tjanster/automatisering-integrationer/index.html
@@ -598,7 +598,7 @@
                         <p class="text__paragraph-sc-1xracbr-7 CaseThreestyle__Paragraph-sc-a06umc-4 gnqhWj hvPxKv">Oavsett om ditt projekt fokuserar på systemutveckling, integrationer eller implementering av AI-teknologi, är vår expertis här för att hjälpa. I många projekt spelar dessa komponenter en central roll. Affärsidéer kan vara helt inriktade på genomtänkta system, medan osynliga integrationer kan ha en betydande effekt på medarbetarnas vardag.</p>
                         <div class="CaseThreestyle__Cases-sc-a06umc-5 nGoEB">
                            <a href="../../cases/alexander-white/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
-                              <img src="/Images/automation-one.avif" alt="Alexander White" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
+                              <img src="/Images/cofee.jpeg" alt="Alexander White" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
                                  <div class="CaseThreestyle__Labels-sc-a06umc-10 ooyUk">
